--- a/styles/game.css
+++ b/styles/game.css
@@ -1,12 +1,24 @@
-.image-container {
-    width: 100px;
-    height: 100px;
-    border: 2px dashed #ccc;
-    margin: 10px;
-  }
-  
-  .image-container img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.item {
+  width: 100px;
+  height: 50px;
+  background-color: #3498db;
+  color: #fff;
+  text-align: center;
+  line-height: 50px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.target {
+  width: 200px;
+  height: 100px;
+  background-color: #e74c3c;
+  color: #fff;
+  text-align: center;
+  line-height: 100px;
+}
